--- a/nginx.conf
+++ b/nginx.conf
@@ -43,6 +43,13 @@ http {
    		 try_files $uri $uri/ /index.html =404;
   	}
     }
+    server {
+    	listen 80 default_server;
+
+    	server_name _;
+
+    	return 301 https://$host$request_uri;
+	}
 }
 
 
